# mega-raw

./: README.md  ed_serial.py  md_ra_tool.py  mega_raw_intro.html  ra_condition.py  uninstall.bat
cpp/: README.md
cpp/release/: README.md  mega_raw_intro.html
cpp/src/: CMakeLists.txt  README.md  archive_extract.cpp  archive_extract.h  badge_loader.cpp  badge_loader.h  batch_patch_worker.cpp  batch_patch_worker.h  cat_text.h  compat.cpp  compat.h  ed_protocol.cpp  ed_protocol.h  ed_serial_qt.cpp  ed_serial_qt.h  i18n.cpp  i18n.h  intro_window.cpp  intro_window.h  json.cpp  json.h  main.cpp  mainwindow.cpp  mainwindow.h  md5.cpp  md5.h  monitor_worker.cpp  monitor_worker.h  ra_cache.cpp  ra_cache.h  ra_client.cpp  ra_client.h  ra_engine.cpp  ra_engine.h  ra_network.cpp  ra_network.h  resources.qrc  rom_patch.cpp  rom_patch.h  sd_export_worker.cpp  (+8 more)
cpp/src/cat_frames/: fmeta.json
python/: README.md  install.bat  md_ra_tool.py  md_set_scan.py  mega_raw_intro.html  requirements.txt
